--- a/pom.xml
+++ b/pom.xml
@@ -80,6 +80,19 @@
 			<scope>test</scope>
 		</dependency>
 
+		<!-- database support -->
+		<dependency>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<version>42.2.6</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.mchange</groupId>
+			<artifactId>c3p0</artifactId>
+			<version>0.9.5.4</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
